# git-vista

./: .gitignore  CODE_REVIEW.md  Cargo.toml  DESIGN.md  PROJECT_MEMORY.md  PROJECT_STATUS.md  README.md  gv  rust-toolchain.toml
.github/workflows/: ci.yml
crates/git-vista/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/git-vista-core/: Cargo.toml
crates/git-vista-core/src/: activity.rs  diff.rs  layout.rs  lib.rs  model.rs  repo.rs  status.rs
crates/git-vista-git/: Cargo.toml
crates/git-vista-git/src/: github.rs  history.rs  lib.rs  reflog.rs  refs.rs
crates/git-vista-server/: Cargo.toml
crates/git-vista-server/src/: activity.rs  journal.rs  main.rs
crates/git-vista/src/: activity.rs  api.rs  app.rs  camera.rs  color.rs  datetime.rs  detail.rs  dialogs.rs  geometry.rs  gestures.rs  graph.rs  icons.rs  lod.rs  main.rs  menu.rs  prefs.rs  render.rs  state.rs  text.rs  viewport.rs
crates/git-vista/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/git-vista/src-tauri/capabilities/: default.json
crates/git-vista/src-tauri/icons/: README.md  icon.icns
crates/git-vista/src-tauri/src/: commands.rs  lib.rs  main.rs
