# Workspace root for git-vista.
#
# Crates you care about:
#   - git-vista-core : pure logic (graph layout + data models). No platform or UI
#                      deps, so it compiles for wasm and is shared by the frontend.
#   - git-vista-git  : native-only git reading via gix. Kept apart from core so
#                      gix never reaches the wasm/browser build.
#   - git-vista      : the Leptos frontend GUI (the app you interact with)
#
# A thin crate -- git-vista/src-tauri -- is the native desktop shell. Tauri
# requires its shell to be its own cargo package; it hosts the Leptos frontend
# in a webview and bridges to the native crates.
[workspace]
resolver = "2"
members = [
    "crates/git-vista-core",
    "crates/git-vista-git",
    "crates/git-vista",
    "crates/git-vista/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tom <thomaslane2010@gmail.com>"]
license = "MIT"
repository = "https://github.com/tom2025b/git-vista"

# Shared dependency versions, referenced from member crates with
# `serde = { workspace = true }` so versions stay in lock-step.
[workspace.dependencies]
git-vista-core = { path = "crates/git-vista-core" }
git-vista-git = { path = "crates/git-vista-git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Smaller, faster release binaries for the desktop app.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
