# Workspace root for git-vista.
#
# Four crates, each with one job:
#   - git-vista-core   : pure logic (graph layout + data models). No platform or UI
#                        deps, so it compiles for wasm and is shared by the frontend.
#   - git-vista-git    : native-only git reading via gix. Kept apart from core so
#                        gix never reaches the wasm/browser build.
#   - git-vista-server : the axum HTTP backend — serves the SPA + the /api/* routes.
#   - git-vista        : the Leptos frontend GUI, built to wasm by Trunk (the app
#                        you interact with in the browser).
[workspace]
resolver = "2"
members = [
    "crates/git-vista-core",
    "crates/git-vista-git",
    "crates/git-vista-server",
    "crates/git-vista",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tom <thomaslane2010@gmail.com>"]
license = "MIT"
repository = "https://github.com/tom2025b/git-vista"

# Shared dependency versions, referenced from member crates with
# `serde = { workspace = true }` so versions stay in lock-step.
[workspace.dependencies]
git-vista-core = { path = "crates/git-vista-core" }
git-vista-git = { path = "crates/git-vista-git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Smaller, faster release binary for the server.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
