[package]
name = "git-vista-core"
description = "Pure logic for git-vista: git parsing, graph layout, and data models. No UI dependencies."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

# Git data layer — read-only history walking via pure-Rust gitoxide.
# Enable when the `repo` walker lands (next milestone); kept out of the
# initial scaffold so the first build needs only rock-stable crates:
# gix = { version = "0.66", default-features = false, features = ["revision"] }
