[package]
name = "git-vista-core"
description = "Pure logic for git-vista: git parsing, graph layout, and data models. No UI dependencies."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# Pure logic only — no platform/UI deps — so this crate compiles for wasm and
# is shared by the browser frontend. Git reading (gix) lives in `git-vista-git`.
[dependencies]
serde = { workspace = true }
