[package]
name = "git-vista-server"
description = "Native HTTP backend for git-vista: serves the wasm SPA and a JSON git-history API on one origin, so the browser (iPad Safari) can view real history."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "git-vista-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
git-vista-core = { workspace = true }
git-vista-git = { workspace = true }
# `process` lets the /api/branch endpoint shell out to `git branch` without
# blocking the async runtime (Issue #18).
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "process"] }
# `tower::Layer` lets us wrap the static file service with a cache-control header
# layer; `set-header` is the tower-http layer that applies it.
tower = "0.5"
tower-http = { version = "0.7.0", features = ["fs", "set-header"] }
