[package]
name = "git-vista-tauri"
description = "git-vista desktop shell (Tauri v2): hosts the Leptos frontend in a native webview."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# The native binary the user actually runs (`cargo tauri dev` / `tauri build`).
[[bin]]
name = "git-vista"
path = "src/main.rs"

# A library target so integration tests / Tauri's mobile entry can reuse `run`.
[lib]
name = "git_vista_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
git-vista-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
